[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/pincer_highlights/pincer_highlight_1.png" type="Texture" id=1]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_3.png" type="Texture" id=2]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_4.png" type="Texture" id=3]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_6.png" type="Texture" id=4]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_2.png" type="Texture" id=5]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_5.png" type="Texture" id=6]
[ext_resource path="res://assets/pincer_highlights/pincer_highlight_corner.png" type="Texture" id=7]
[ext_resource path="res://board/PincerHighlight.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Fade in and out"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Highlight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 2.73208 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Highlight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 0.435275, 1, 0.366022 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Highlight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="PincerHighlight" type="Node2D"]
script = ExtResource( 8 )
player_color = Color( 1, 0.309804, 0.309804, 1 )
enemy_color = Color( 0.780392, 0.968627, 0.94902, 1 )

[node name="Highlight" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.1, 1.1 )

[node name="PincerHighlight3Units" type="Sprite" parent="Highlight"]
texture = ExtResource( 1 )

[node name="PincerHighlight4Units" type="Sprite" parent="Highlight"]
visible = false
texture = ExtResource( 5 )

[node name="PincerHighlight5Units" type="Sprite" parent="Highlight"]
visible = false
texture = ExtResource( 2 )

[node name="PincerHighlight6Units" type="Sprite" parent="Highlight"]
visible = false
texture = ExtResource( 3 )

[node name="PincerHighlight7Units" type="Sprite" parent="Highlight"]
visible = false
texture = ExtResource( 6 )

[node name="PincerHighlight8Units" type="Sprite" parent="Highlight"]
visible = false
texture = ExtResource( 4 )

[node name="PincerHighlightBottomLeftCorner" type="Sprite" parent="Highlight"]
visible = false
rotation = -1.5708
texture = ExtResource( 7 )
offset = Vector2( 50, 50 )

[node name="PincerHighlightBottomRightCorner" type="Sprite" parent="Highlight"]
visible = false
position = Vector2( -50, 50 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="PincerHighlightTopLeftCorner" type="Sprite" parent="Highlight"]
visible = false
position = Vector2( 50, 50 )
texture = ExtResource( 7 )

[node name="PincerHighlightTopRightCorner" type="Sprite" parent="Highlight"]
visible = false
position = Vector2( -50, 50 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade in and out" = SubResource( 1 )
